[gd_scene load_steps=13 format=3 uid="uid://65aj4a6j7um8"]

[ext_resource type="PackedScene" uid="uid://cemkbhdqbcv40" path="res://Levels/Step1/HandshakeLabel/HandshakeLabel.tscn" id="1_ct1xx"]
[ext_resource type="Script" path="res://Levels/Step1/step_1_encapsulation.gd" id="1_y30ob"]
[ext_resource type="PackedScene" uid="uid://gbk6a7fgysvl" path="res://Levels/Step1/computer/computer_drop.tscn" id="3_qyind"]
[ext_resource type="PackedScene" uid="uid://d363c88bd3ph5" path="res://Levels/Step1/machine/machine_drop.tscn" id="4_0d38r"]
[ext_resource type="PackedScene" uid="uid://drqiswvmjg22j" path="res://Levels/Step1/syn_ack.tscn" id="5_5rus4"]
[ext_resource type="Script" path="res://Levels/Step1/syn_ack.gd" id="6_ae140"]
[ext_resource type="Script" path="res://Levels/Step1/syn_ack_2.gd" id="7_3f3g7"]
[ext_resource type="PackedScene" uid="uid://b427tvgyrmmcf" path="res://Levels/Step1/syn_entity.tscn" id="8_lxxcj"]
[ext_resource type="Script" path="res://Levels/Step1/syn_entity.gd" id="9_b6tfx"]
[ext_resource type="Script" path="res://Levels/Step1/syn_entity_2.gd" id="10_aitka"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bttb8"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sed1m"]
size = Vector2(50, 50)

[node name="Step1_Encapsulation" type="Node2D"]
script = ExtResource("1_y30ob")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="HandshakeLabel" parent="." instance=ExtResource("1_ct1xx")]
offset_left = 50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 10.0

[node name="Button" type="Button" parent="HandshakeLabel"]
layout_mode = 0
offset_left = 485.0
offset_top = 582.0
offset_right = 564.0
offset_bottom = 613.0
text = "Continue
"

[node name="Computer" parent="." groups=["computer_drop"] instance=ExtResource("3_qyind")]
position = Vector2(321, 414)
scale = Vector2(8, 8)

[node name="Machine" parent="." groups=["machine_drop"] instance=ExtResource("4_0d38r")]
position = Vector2(826, 415)
scale = Vector2(8, 8)

[node name="Entities" type="Node" parent="."]

[node name="syn_ack_1" parent="Entities" instance=ExtResource("5_5rus4")]
position = Vector2(835, 230)
scale = Vector2(1.5, 1.5)
script = ExtResource("6_ae140")

[node name="syn_ack_area_1" type="Area2D" parent="Entities/syn_ack_1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/syn_ack_1/syn_ack_area_1"]
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_bttb8")

[node name="syn_ack_2" parent="Entities" instance=ExtResource("5_5rus4")]
position = Vector2(280, 220)
scale = Vector2(1.5, 1.5)
script = ExtResource("7_3f3g7")

[node name="syn_ack_area_2" type="Area2D" parent="Entities/syn_ack_2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/syn_ack_2/syn_ack_area_2"]
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_bttb8")

[node name="syn_entity_1" parent="Entities" instance=ExtResource("8_lxxcj")]
position = Vector2(280, 220)
scale = Vector2(1.5, 1.5)
script = ExtResource("9_b6tfx")

[node name="syn_area_1" type="Area2D" parent="Entities/syn_entity_1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/syn_entity_1/syn_area_1"]
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_sed1m")

[node name="syn_entity_2" parent="Entities" instance=ExtResource("8_lxxcj")]
position = Vector2(745, 230)
scale = Vector2(1.5, 1.5)
script = ExtResource("10_aitka")

[node name="syn_area_2" type="Area2D" parent="Entities/syn_entity_2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/syn_entity_2/syn_area_2"]
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_sed1m")

[connection signal="pressed" from="HandshakeLabel/Button" to="HandshakeLabel" method="_on_button_pressed"]
[connection signal="body_entered" from="Entities/syn_ack_1/syn_ack_area_1" to="Entities/syn_ack_1" method="_on_syn_ack_area_1_body_entered"]
[connection signal="body_exited" from="Entities/syn_ack_1/syn_ack_area_1" to="Entities/syn_ack_1" method="_on_syn_ack_area_1_body_exited"]
[connection signal="mouse_entered" from="Entities/syn_ack_1/syn_ack_area_1" to="Entities/syn_ack_1" method="_on_syn_ack_area_1_mouse_entered"]
[connection signal="mouse_exited" from="Entities/syn_ack_1/syn_ack_area_1" to="Entities/syn_ack_1" method="_on_syn_ack_area_1_mouse_exited"]
[connection signal="body_entered" from="Entities/syn_ack_2/syn_ack_area_2" to="Entities/syn_ack_2" method="_on_syn_ack_area_2_body_entered"]
[connection signal="body_exited" from="Entities/syn_ack_2/syn_ack_area_2" to="Entities/syn_ack_2" method="_on_syn_ack_area_2_body_exited"]
[connection signal="mouse_entered" from="Entities/syn_ack_2/syn_ack_area_2" to="Entities/syn_ack_2" method="_on_syn_ack_area_2_mouse_entered"]
[connection signal="mouse_exited" from="Entities/syn_ack_2/syn_ack_area_2" to="Entities/syn_ack_2" method="_on_syn_ack_area_2_mouse_exited"]
[connection signal="body_entered" from="Entities/syn_entity_1/syn_area_1" to="Entities/syn_entity_1" method="_on_syn_area_1_body_entered"]
[connection signal="body_exited" from="Entities/syn_entity_1/syn_area_1" to="Entities/syn_entity_1" method="_on_syn_area_1_body_exited"]
[connection signal="mouse_entered" from="Entities/syn_entity_1/syn_area_1" to="Entities/syn_entity_1" method="_on_syn_area_1_mouse_entered"]
[connection signal="mouse_exited" from="Entities/syn_entity_1/syn_area_1" to="Entities/syn_entity_1" method="_on_syn_area_1_mouse_exited"]
[connection signal="body_entered" from="Entities/syn_entity_2/syn_area_2" to="Entities/syn_entity_2" method="_on_syn_area_2_body_entered"]
[connection signal="body_exited" from="Entities/syn_entity_2/syn_area_2" to="Entities/syn_entity_2" method="_on_syn_area_2_body_exited"]
[connection signal="mouse_entered" from="Entities/syn_entity_2/syn_area_2" to="Entities/syn_entity_2" method="_on_syn_area_2_mouse_entered"]
[connection signal="mouse_exited" from="Entities/syn_entity_2/syn_area_2" to="Entities/syn_entity_2" method="_on_syn_area_2_mouse_exited"]
